manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: files-dp
  namespace: personal
  labels:
    app: files-dp
spec:
  replicas: 1
  revisionHistoryLimit: 0  # Retains only the last ReplicaSet
  selector:
    matchLabels:
      app: files-dp
  template:
    metadata:
      labels:
        app: files-dp
    spec:
      containers:
      - name: files-dp-container
        image: 192.168.1.2:32000/filesprg:latest  # Use 'image' instead of 'files'
        imagePullPolicy: Always  # Use 'imagePullPolicy' instead of 'filesPullPolicy'
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: files-volume
          mountPath: /app/personal  # This is where the PVC for files will be mounted
      volumes:
      - name: files-volume
        persistentVolumeClaim:
          claimName: pvc-files-hostpath  # Reference to the PVC for files
