manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: files-service
  namespace: dinara
  labels:
    app: files-dp
spec:
  selector:
    app: files-dp   # Matches the labels of the deployment
  ports:
    - protocol: TCP
      port: 5005
      targetPort: 8000  
      nodePort: 30008
  type: NodePort
