manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filessvc-ingress
  namespace: personal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: api.kahitoz.com
    http:
      paths:
      - path: /cdn(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: files-service
            port:
              number: 5003
